kube/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb
  labels:
    app: auth-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongodb
  template:
    metadata:
      labels:
        app: auth-mongodb
    spec:
      containers:
        - name: auth-mongodb
          image: mongo
          imagePullPolicy: "IfNotPresent"
          #args: [ "--dbpath", "/data/" ]

#          livenessProbe:
#            exec:
#              command:
#                - mongo
#                - --disableImplicitSessions
#                - --eval
#                - "db.adminCommand('ping')"
#            initialDelaySeconds: 30
#            periodSeconds: 10
#            timeoutSeconds: 5
#            successThreshold: 1
#            failureThreshold: 6
#          readinessProbe:
#            exec:
#              command:
#                - mongo
#                - --disableImplicitSessions
#                - --eval
#                - "db.adminCommand('ping')"
#            initialDelaySeconds: 30
#            periodSeconds: 10
#            timeoutSeconds: 5
#            successThreshold: 1
#            failureThreshold: 6
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: "/data/"
              name: "auth-mongo-data-dir"
            - mountPath: "/docker-entrypoint-initdb.d"
              name: auth-mongo-initdb
      volumes:
        - name: "auth-mongo-initdb"
          persistentVolumeClaim:
            claimName: "auth-mongo-initdb-pv-claim"
        - name: "auth-mongo-data-dir"
          persistentVolumeClaim:
            claimName: "auth-mongo-data-pv-claim"
